fix spacing issue

--- a/assets/section-pdp.css
+++ b/assets/section-pdp.css
@@ -65,7 +65,13 @@
     display: flex;
     flex-direction: column;
     gap: var(--gap);
-    margin-bottom: -8px;
+    margin-bottom: -10px;
+}
+
+@media (max-width: 900px) {
+    .pdp__variants {
+        margin-bottom: 0;
+    }
 }
 
 .pdp__variant-buttons {
